cleaned android data

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -55,19 +55,22 @@
     "        super(TweetsListener, self).__init__()\n",
     "        self.num_tweets = 0\n",
     "        self.filename = filename\n",
-    "    \n",
-    "    def on_status(self, status):\n",
-    "        record = {'Text': status.text.encode('utf-8').strip(), 'Created At': str(status.created_at)}\n",
-    "        if self.num_tweets < 1000:\n",
-    "            try:\n",
-    "                with open(self.filename, 'a') as f:\n",
-    "                    pickle.dump(record,f)\n",
-    "                    self.num_tweets += 1\n",
-    "                return True\n",
-    "            except BaseException as e:\n",
-    "                print(\"Error on_status: %s\" % str(e))\n",
-    "        else:\n",
-    "            return False\n",
+    "        self.stopHashTagList = [\"#androidgames\",\"#gamesinsight\"]\n",
+    "        \n",
+    "    def on_status(self, status): \n",
+    "        text = status.text.encode('utf-8').strip().lower()\n",
+    "        if not any(x in text for x in self.stopHashTagList):\n",
+    "            record = {'Text': text, 'Created At': str(status.created_at)}\n",
+    "            if self.num_tweets < 1000:\n",
+    "                try:\n",
+    "                    with open(self.filename, 'a') as f:\n",
+    "                        pickle.dump(record,f)\n",
+    "                        self.num_tweets += 1\n",
+    "                    return True\n",
+    "                except BaseException as e:\n",
+    "                    print(\"Error on_status: %s\" % str(e))\n",
+    "            else:\n",
+    "                return False\n",
     "        \n",
     "    def on_error(self, status):\n",
     "        print 'Error on status', status\n",
@@ -81,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# stream = Stream(auth, TweetsListener(filename = 'data_android.json'))\n",
-    "# stream.filter(track=['android','androidvsios','iosvsandroid'],languages=['en'])\n"
+    "stream = Stream(auth, TweetsListener(filename = 'data_android.json'))\n",
+    "stream.filter(track=['android','androidvsios','iosvsandroid'],languages=['en'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -177,13 +180,13 @@
    "source": [
     "list_android = readTweets('data_android.json')\n",
     "writeListToTextFile(list_android,'data_android.txt')\n",
-    "list_ios = readTweets('data_ios.json')\n",
-    "writeListToTextFile(list_ios,'data_ios.txt')"
+    "# list_ios = readTweets('data_ios.json')\n",
+    "# writeListToTextFile(list_ios,'data_ios.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -232,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "preProcessTweets('data_android.txt')\n",
-    "preProcessTweets('data_ios.txt')"
+    "# preProcessTweets('data_ios.txt')"
    ]
   },
   {
