--- a/Project.ipynb
+++ b/Project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "import hashlib\n",
-    "import glob"
+    "import glob\n",
+    "import math\n",
+    "from decimal import *\n",
+    "from __future__ import division"
    ]
   },
   {
@@ -367,49 +370,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "featureList = []\n",
-    "tweets = []\n",
     "stopWords = getStopWordList('stopwords.txt')\n",
     "def featureExtraction(filename):\n",
+    "    featureList = []\n",
+    "    tweets = []\n",
     "    fp = open(filename,'r')\n",
     "    line = fp.readline()\n",
     "    while line:\n",
     "        linearray = line.split('-',1)\n",
-    "#         print linearray[0]\n",
-    "#         print linearray[1]\n",
     "        sentiment = linearray[0]\n",
     "        tweet = linearray[1]\n",
     "        processedTweet = processTweet(tweet)\n",
     "        featureVector = getFeatureVector(processedTweet,stopWords)\n",
     "        featureList.extend(featureVector)\n",
     "        tweets.append((featureVector,sentiment))\n",
-    "        line = fp.readline()\n",
-    "\n",
-    "featureExtraction('data/newdata_ios.txt')\n",
-    "featureList = list(set(featureList))\n",
-    "    "
+    "        line = fp.readline()  \n",
+    "    return(featureList,tweets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getStatisticsAboutTweets(filename):\n",
+    "    fp = open(filename,'r')\n",
+    "    tweets = []\n",
+    "    line = fp.readline()\n",
+    "    while line:\n",
+    "        tweets.append(line)\n",
+    "        line = fp.readline()\n",
+    "    return tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "training_set = nltk.classify.util.apply_features(extract_features, tweets)"
+    "def predictUserPreferences(trainFileName, testFileName):\n",
+    "    featureList = []\n",
+    "    tweets = []\n",
+    "    featureList, tweets = featureExtraction(trainFileName)\n",
+    "    featureList = list(set(featureList))\n",
+    "    training_set =  nltk.classify.util.apply_features(extract_features, tweets)\n",
+    "    NBClassifier = nltk.NaiveBayesClassifier.train(training_set)\n",
+    "    analyzedTweets = getStatisticsAboutTweets(testFileName)\n",
+    "    print \"Total tweets analyzed : \" + str(len(analyzedTweets))\n",
+    "    predictedNegativeTweetsLabel = []\n",
+    "    predictedPositiveTweetsLabel = []\n",
+    "    predictedNeutralTweetsLabel = []\n",
+    "    for tweet in analyzedTweets:\n",
+    "        processedTestTweet = processTweet(tweet)\n",
+    "        label = NBClassifier.classify(extract_features(getFeatureVector(processedTestTweet,stopWords)))\n",
+    "        if label == 'n':\n",
+    "            predictedNegativeTweetsLabel.append((tweet,label))\n",
+    "        elif label == 'p':\n",
+    "            predictedPositiveTweetsLabel.append((tweet,label))\n",
+    "        elif label == 'ne':\n",
+    "            predictedNeutralTweetsLabel.append((tweet,label))\n",
+    "            \n",
+    "    percentPositive = (len(predictedPositiveTweetsLabel)/len(analyzedTweets)) * 100\n",
+    "    percentNegative = (len(predictedNegativeTweetsLabel)/len(analyzedTweets)) * 100\n",
+    "    percentNeutral = (len(predictedNeutralTweetsLabel)/len(analyzedTweets)) * 100\n",
+    "    \n",
+    "    print \"Positive Percentage \" + str(percentPositive)\n",
+    "    print \"Negative Percentage \" + str(percentNegative)\n",
+    "    print \"Neutral Percentage \" + str(percentNeutral)\n",
+    "    \n",
+    "    if(percentPositive > percentNegative):\n",
+    "        print \"Users prefer iOS more!!\"\n",
+    "    elif(percentPositive < percentNegative):\n",
+    "        print \"Users dont prefer iOS!!\"\n",
+    "    elif(percentPositive == percentNegative):\n",
+    "        print \"User preferences are neutral\"\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -418,15 +470,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n\n"
+      "Total tweets analyzed : 1332\n",
+      "Positive Percentage 6.15615615616\n",
+      "Negative Percentage 1.35135135135\n",
+      "Neutral Percentage 92.4924924925\n",
+      "Users prefer iOS more!!\n"
      ]
     }
    ],
    "source": [
-    "NBClassifier = nltk.NaiveBayesClassifier.train(training_set)\n",
-    "testTweet = 'When you realize you just cant switch from Iphone to Android bc of you COC Account'\n",
-    "processedTestTweet = processTweet(testTweet)\n",
-    "print NBClassifier.classify(extract_features(getFeatureVector(processedTestTweet,stopWords)))"
+    "predictUserPreferences('data/newdata_ios.txt','data_ios.txt')\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total tweets analyzed : 1306\n",
+      "Positive Percentage 6.58499234303\n",
+      "Negative Percentage 2.60336906585\n",
+      "Neutral Percentage 90.8116385911\n",
+      "Users prefer iOS more!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictUserPreferences('data/newdata_android.txt','data_android.txt')"
    ]
   },
   {
@@ -648,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -660,19 +737,12 @@
       "Fold 0 accuracy = 1.0\n",
       "Fold 1 accuracy = 1.0\n",
       "Fold 2 accuracy = 1.0\n",
-      "Fold 3 accuracy = 1.0\n",
-      "Fold 4 accuracy = 1.0\n",
-      "Fold 5 accuracy = 1.0\n",
-      "Fold 6 accuracy = 1.0\n",
-      "Fold 7 accuracy = 1.0\n",
-      "Fold 8 accuracy = 1.0\n",
-      "Fold 9 accuracy = 1.0\n",
       "average cross validation accuracy=1.0000\n"
      ]
     }
    ],
    "source": [
-    "def do_cross_validation(X, y, n_folds=10, verbose=False):\n",
+    "def do_cross_validation(X, y, n_folds=3, verbose=False):\n",
     "    \"\"\"\n",
     "    Perform n-fold cross validation, calling get_clf() to train n\n",
     "    different classifiers. Use sklearn's KFold class: http://goo.gl/wmyFhi\n",
@@ -690,7 +760,7 @@
     "    i = 0\n",
     "    accuracies = []\n",
     "    for train_idx, test_idx in cv:\n",
-    "        clf = LogisticRegression()\n",
+    "        clf = get_clf()\n",
     "        clf.fit(X[train_idx], y[train_idx])\n",
     "        predicted = clf.predict(X[test_idx])\n",
     "        acc = accuracy_score(y[test_idx], predicted)\n",
@@ -708,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -746,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
