--- a/Project.ipynb
+++ b/Project.ipynb
@@ -336,25 +336,9 @@
    },
    "outputs": [],
    "source": [
-    "def extract_features(tweet):\n",
-    "    tweet_words = set(tweet)\n",
-    "    features = {}\n",
-    "    for word in featureList:\n",
-    "        features['contains(%s)' % word] = (word in tweet_words)\n",
-    "    return features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "stopWords = getStopWordList('stopwords.txt')\n",
+    "featureList = []\n",
     "def featureExtraction(filename):\n",
-    "    featureList = []\n",
     "    tweets = []\n",
     "    fp = open(filename,'r')\n",
     "    line = fp.readline()\n",
@@ -367,12 +351,12 @@
     "        featureList.extend(featureVector)\n",
     "        tweets.append((featureVector,sentiment))\n",
     "        line = fp.readline()  \n",
-    "    return(featureList,tweets)"
+    "    return(tweets,featureList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -390,17 +374,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def extract_features(tweet):\n",
+    "    tweet_words = set(tweet)\n",
+    "    features = {}\n",
+    "    for word in featureList:\n",
+    "        features['contains(%s)' % word] = (word in tweet_words)\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "featureList = []\n",
     "def predictUserPreferences(trainFileName, testFileName):\n",
-    "#     featureList = []\n",
-    "    tweets = []\n",
-    "    featureList, tweets = featureExtraction(trainFileName)\n",
+    "    featureList = []\n",
+    "    tweets,featureList = featureExtraction(trainFileName)\n",
     "    featureList = list(set(featureList))\n",
     "    training_set =  nltk.classify.util.apply_features(extract_features, tweets)\n",
     "    NBClassifier = nltk.NaiveBayesClassifier.train(training_set)\n",
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -448,10 +446,10 @@
      "output_type": "stream",
      "text": [
       "Total tweets analyzed : 1332\n",
-      "Positive Percentage 0.0\n",
-      "Negative Percentage 0.0\n",
-      "Neutral Percentage 100.0\n",
-      "User preferences are neutral\n"
+      "Positive Percentage 6.15615615616\n",
+      "Negative Percentage 1.35135135135\n",
+      "Neutral Percentage 92.4924924925\n",
+      "Users prefer iOS more!!\n"
      ]
     }
    ],
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -472,9 +470,9 @@
      "output_type": "stream",
      "text": [
       "Total tweets analyzed : 1306\n",
-      "Positive Percentage 6.58499234303\n",
-      "Negative Percentage 2.60336906585\n",
-      "Neutral Percentage 90.8116385911\n",
+      "Positive Percentage 3.29249617152\n",
+      "Negative Percentage 0.918836140888\n",
+      "Neutral Percentage 95.7886676876\n",
       "Users prefer iOS more!!\n"
      ]
     }
