--- a/Project.ipynb
+++ b/Project.ipynb
@@ -55,10 +55,10 @@
    "source": [
     "##Twiiter configuration information\n",
     "\n",
-    "access_token = \"97387398-09aWi5l77s95Vy7Jag58WvQ1soy9TzoGCA0vruWH5\"\n",
-    "access_token_secret = \"ZzBHbF3LjXg7Wl40VIa6nJomv1TdwQW9Am1oQRzIW0RLN\"\n",
-    "consumer_key = \"Ii9orQvVcYDTzbk5feDFIuz1n\"\n",
-    "consumer_secret = \"MXTqped02xYhyuer6IpO2Rt2377MRGsTHhJQnMZ9aOagGrTLnD\"\n",
+    "access_token = \"<access_token>\"\n",
+    "access_token_secret = \"<secret_token>\"\n",
+    "consumer_key = \"<consumer_key>\"\n",
+    "consumer_secret = \"<consumer_secret>\"\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n"
